--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2157700419565527"
+     crossorigin="anonymous"></script>
 
         <title>N.M.COACHING - Homepage</title>
     </head>
