--- a/index.html
+++ b/index.html
@@ -197,6 +197,19 @@
                     </div>
                 </div>
             </section>
+         
+         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2157700419565527"
+     crossorigin="anonymous"></script>
+<!-- nmad1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2157700419565527"
+     data-ad-slot="6930254099"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
             <!--==================== FEATURED ====================-->
             <section class="featured section container" id="featured">
