--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <!--=============== BOXICONS ===============-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+     <link rel="icon" href="https://cdn.discordapp.com/attachments/933567614310027336/986199408846721064/WhatsApp_Image_2022-06-14_at_2.50.24_PM-removebg-preview.png">
 
         <!--=============== SWIPER CSS ===============--> 
         <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
