--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                 </div>
             </div>
 
-            <span class="footer__copy">&#169; Bedimcode. All rigths reserved</span>
+            <span class="footer__copy">&#169; DuKu Business. All rigths reserved</span>
         </footer>
 
         <!--=============== SCROLL UP ===============-->
