--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
 
                     <div class="testimonial__images">
                         <div class="testimonial__square"></div>
-                        <img src="assets/img/testimonial.png" alt="" class="testimonial__img">
+                        <img src="https://cdn.discordapp.com/attachments/933567614310027336/986199408846721064/WhatsApp_Image_2022-06-14_at_2.50.24_PM-removebg-preview.png" alt="" class="testimonial__img">
                     </div>
                 </div>
             </section>
