--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--=============== FAVICON ===============-->
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2157700419565527"
-     crossorigin="anonymous"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2157700419565527"
+        crossorigin="anonymous"></script>
 
         <!--=============== BOXICONS ===============-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
@@ -368,7 +368,7 @@
                                 <h3 class="testimonial__date">March 27. 2021</h3>
         
                                 <div class="testimonial__perfil">
-                                    <img src="assets/img/testimonial1.jpg" alt="" class="testimonial__perfil-img">
+                                    <img src="https://cdn.discordapp.com/attachments/933567614310027336/986199408846721064/WhatsApp_Image_2022-06-14_at_2.50.24_PM-removebg-preview.png" alt="" class="testimonial__perfil-img">
         
                                     <div class="testimonial__perfil-data">
                                         <span class="testimonial__perfil-name">Lee Doe</span>
@@ -529,9 +529,9 @@
                     <h3 class="footer__title">Our information</h3>
 
                     <ul class="footer__list">
-                        <li>1234 - Peru</li>
-                        <li>La Libertad 43210</li>
-                        <li>123-456-789</li>
+                        <li>Soniga,baha,Kagarol</li>
+                        <li>AGRA</li>
+                        <li>+919568840299</li>
                     </ul>
                 </div>
                 <div class="footer__content">
@@ -539,16 +539,16 @@
 
                     <ul class="footer__links">
                         <li>
-                            <a href="#" class="footer__link">Support Center</a>
+                            <a href="#" class="footer__link">UP BOARD (IX-XII)</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Customer Support</a>
+                            <a href="#" class="footer__link">Maths & Physics</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">About Us</a>
+                            <a href="#" class="footer__link">CBSE BOARD (IX-X)</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Copy Right</a>
+                            <a href="#" class="footer__link">Maths & Science</a>
                         </li>
                     </ul>
                 </div>
@@ -558,16 +558,16 @@
 
                     <ul class="footer__links">
                         <li>
-                            <a href="#" class="footer__link">Road bikes</a>
+                            <a href="#" class="footer__link">Maths</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Mountain bikes</a>
+                            <a href="#" class="footer__link">Physics</a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Electric</a>
+                            <a href="#" class="footer__link"></a>
                         </li>
                         <li>
-                            <a href="#" class="footer__link">Accesories</a>
+                            <a href="#" class="footer__link"></a>
                         </li>
                     </ul>
                 </div>
@@ -576,15 +576,15 @@
                     <h3 class="footer__title">Social</h3>
 
                     <ul class="footer__social">
-                        <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
+                        <a href="https://www.facebook.com/N.M.Dineshupreti" target="_blank" class="footer__social-link">
                             <i class='bx bxl-facebook'></i>
                         </a>
 
-                        <a href="https://twitter.com/" target="_blank" class="footer__social-link">
-                            <i class='bx bxl-twitter' ></i>
+                        <a href="https://www.youtube.com/c/NMCOACHING" target="_blank" class="footer__social-link">
+                            <i class='bx bxl-youtube' ></i>
                         </a>
 
-                        <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
+                        <a href="https://www.instagram.com/n.m.coaching/" target="_blank" class="footer__social-link">
                             <i class='bx bxl-instagram' ></i>
                         </a>
                     </ul>
