--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <!--=============== FAVICON ===============-->
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2157700419565527"
         crossorigin="anonymous"></script>
+	    
+	    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6407805817014399"
+     crossorigin="anonymous"></script>
 
         <!--=============== BOXICONS ===============-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
